itt van ur welcome
xper2

--- a/oldal4.html
+++ b/oldal4.html
@@ -9,5 +9,118 @@ könyvek
 <body bgcolor=#C0D6E4>
 <table border="2">
 <tr>
-<td> Díjak,elismerések </td>
-<td> Évszám </td>
+<td>Díjak,elismerések</td>
+<td>Évszám</td>
+</tr>
+<tr>
+<td>Füst Milán-díj</td>
+<td>1983</td>
+</tr>
+<tr>
+  <td>Forintos-díj</td>
+  <td>1986</td>
+</tr>
+<tr>
+  <td>Artisjus Irodalmi-díj</td>
+  <td>1988</td>
+</tr>
+<tr>
+  <td>Aszu-díj</td>
+  <td>1989</td>
+</tr>
+<tr>
+  <td>József Attila-díj</td>
+  <td>1989</td>
+</tr>
+<tr>
+  <td>Déry Tibor-díj</td>
+  <td>1989</td>
+</tr>
+<tr>
+  <td>Örley-díj</td>
+  <td>1990</td>
+</tr>
+<tr>
+  <td>Az Év Könyve jutalom</td>
+  <td>1990</td>
+</tr><tr>
+  <td>Soros-életműdíj</td>
+  <td>1992</td>
+</tr><tr>
+  <td>Branderburgi Irodalmi Díj</td>
+  <td>1995</td>
+</tr><tr>
+  <td>Márai Sándor-díj</td>
+  <td>1996</td>
+</tr><tr>
+  <td>Kossuth-díj</td>
+  <td>1997</td>
+</tr><tr>
+  <td>A libcsei könyvvásár nagydíja</td>
+  <td>1997</td>
+</tr><tr>
+  <td>Friedrich Gundolf-díj</td>
+  <td>1997</td>
+</tr>
+<tr>
+  <td>Herder-díj</td>
+  <td>2000</td>
+</tr>
+<tr>
+  <td>A Die Welt irodalmi díja</td>
+  <td>2000</td>
+</tr>
+<tr>
+  <td>Pour le Mérite</td>
+  <td>2001</td>
+</tr>
+<tr>
+  <td>Irodalmi Nobel-díj</td>
+  <td>2002</td>
+</tr>
+<tr>
+  <td>Hans Sahl-díj</td>
+  <td>2002</td>
+</tr>
+<tr>
+  <td>YIVO életműdíj</td>
+  <td>2002</td>
+</tr>
+<tr>
+  <td>Budapest díszpolgára</td>
+  <td>2002</td>
+</tr>
+<tr>
+  <td>A Magyar Köztársasági Érdemrend nagykeresztje</td>
+  <td>2003</td>
+</tr>
+<tr>
+  <td>Corine-díj</td>
+  <td>2004</td>
+</tr>
+<tr>
+  <td>Goethe-érem</td>
+  <td>2004</td>
+</tr>
+<tr>
+  <td>Jean Améry-díj</td>
+  <td>2009</td>
+</tr>
+<tr>
+  <td>Párizs városának nagy aranyozott ezüst érme</td>
+  <td>2011</td>
+</tr>
+<tr>
+  <td>Magyar Szent István-rend</td>
+  <td>2015</td>
+</tr>
+<tr>
+  <td>Francia Köztársaság Művészeti és Irodalmi Rendjének parancsnoki fokozata</td>
+  <td>2015</td>
+</tr>
+<tr>
+  <td>A marosvásárhelyi Petru Maior Egyetem díszdoktora </td>
+  <td>2015</td>
+</tr>
+</table>
+</html>
